Evaluation Max Agreement

--- a/Coding/03_VotingSystem.ipynb
+++ b/Coding/03_VotingSystem.ipynb
@@ -13,32 +13,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from read_write_files import read_json,save_json,get_parser_paths\n",
-    "from helper_functions import get_sense_lists,align_parsers_to_gold\n",
+    "from helper_functions import get_sense_lists,align_parsers_to_gold,plot_confusion_matrix\n",
     "import numpy as np\n",
     "import conll16st.scorer as scorer\n",
+    "import conll16st.partial_scorer as partial_scorer\n",
     "import random\n",
     "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "sense_model_path = \"data/project_files/test/sense_model.json\"\n",
     "total_alignment_path = \"data/project_files/blind/total_alignment.json\"\n",
-    "test_data_path = \"data/gold_standard/blind/relations.json\""
+    "test_data_path = \"data/gold_standard/blind/relations.json\"\n",
+    "example_parser_path = \"data/submissions/sense_only/blind/oslopots/output/output.json\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example_parser = read_json(example_parser_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,20 +112,42 @@
     "    \n",
     "    if sum(probs) == 0:\n",
     "        result = -1\n",
-    "    #    sense_counter = Counter(sense_predictions)\n",
-    "    #    best_sense = a.most_common(1)[0][0]\n",
-    "    #    probs\n",
     "    \n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_parser_indexes = voting(parser_senses,parser_names,sense_model,best_wins_voting)"
+    "def max_agreement(predictions,model):\n",
+    "    sense_counter = Counter(predictions)\n",
+    "    best_sense = sense_counter.most_common(1)[0][0]\n",
+    "    \n",
+    "    if best_sense == \"None\":\n",
+    "        return -1\n",
+    "    \n",
+    "    return predictions.index(best_sense) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_wins_parsers = voting(parser_senses,parser_names,sense_model,best_wins_voting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_agreement_parsers = voting(parser_senses,parser_names,sense_model,max_agreement)"
    ]
   },
   {
@@ -128,92 +161,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def exchange_sense_values(alignment_list,best_relation_indexes):\n",
-    "    new_relations = []\n",
+    "def exchange_sense_values(parser_rel,alignment_list,best_relation_indexes):\n",
+    "    relation_senses = {}\n",
     "    \n",
     "    for best_parser,alignments in zip(*[best_relation_indexes,alignment_list]):\n",
     "        if best_parser != -1:\n",
-    "            new_rel = alignments[\"parsers\"][best_parser]\n",
+    "            best_sense = alignments[\"parsers\"][best_parser][\"Sense\"]\n",
+    "            \n",
+    "            relation_senses[alignments[\"gold\"][\"ID\"]] = best_sense\n",
     "            \n",
     "            #best_sense = best_parser_result[\"Sense\"][0]\n",
     "            #new_rel = alignments[\"gold\"].copy()\n",
     "            #new_rel[\"Sense\"] = best_sense\n",
+    "    \n",
+    "    \n",
+    "    for rel in parser_rel:\n",
+    "        rel_id = rel[\"ID\"]\n",
+    "        if rel_id in relation_senses:\n",
+    "            rel[\"Sense\"] = relation_senses[rel_id] \n",
     "        \n",
-    "            new_relations.append(new_rel)\n",
-    "        \n",
-    "    return new_relations"
+    "    return parser_rel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_relations = exchange_sense_values(total_alignments,best_parser_indexes)"
+    "best_wins_relations = exchange_sense_values(example_parser,total_alignments,best_wins_parsers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explicit connectives         : Precision 0.8403 Recall 0.7572 F1 0.7966\n",
-      "Arg 1 extractor              : Precision 0.8224 Recall 0.8197 F1 0.8210\n",
-      "Arg 2 extractor              : Precision 0.8108 Recall 0.8081 F1 0.8094\n",
-      "Arg1 Arg2 extractor combined : Precision 0.6988 Recall 0.6964 F1 0.6976\n",
-      "Sense classification--------------\n",
-      "*Micro-Average                    precision 0.2988\trecall 0.2978\tF1 0.2983\n",
-      "Comparison.Concession             precision 1.0000\trecall 0.0000\tF1 0.0000\n",
-      "Comparison.Contrast               precision 0.0965\trecall 0.4074\tF1 0.1560\n",
-      "Contingency.Cause.Reason          precision 0.1935\trecall 0.0800\tF1 0.1132\n",
-      "Contingency.Cause.Result          precision 0.5000\trecall 0.0204\tF1 0.0392\n",
-      "Contingency.Condition             precision 0.5312\trecall 0.6538\tF1 0.5862\n",
-      "EntRel                            precision 0.2736\trecall 0.1450\tF1 0.1895\n",
-      "Expansion.Alternative             precision 1.0000\trecall 0.3333\tF1 0.5000\n",
-      "Expansion.Conjunction             precision 0.3260\trecall 0.5920\tF1 0.4205\n",
-      "Expansion.Instantiation           precision 0.1905\trecall 0.0909\tF1 0.1231\n",
-      "Expansion.Restatement             precision 0.5000\trecall 0.0066\tF1 0.0131\n",
-      "Temporal.Asynchronous.Precedence  precision 0.3718\trecall 0.5800\tF1 0.4531\n",
-      "Temporal.Asynchronous.Succession  precision 0.6471\trecall 0.5238\tF1 0.5789\n",
-      "Temporal.Synchrony                precision 0.3509\trecall 0.4000\tF1 0.3738\n",
-      "Overall parser performance --------------\n",
-      "Precision 0.2988 Recall 0.2978 F1 0.2983\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(<conll16st.confusion_matrix.ConfusionMatrix at 0x1085e2e90>,\n",
-       " <conll16st.confusion_matrix.ConfusionMatrix at 0x10bc23050>,\n",
-       " <conll16st.confusion_matrix.ConfusionMatrix at 0x105642a10>,\n",
-       " <conll16st.confusion_matrix.ConfusionMatrix at 0x1083de710>,\n",
-       " <conll16st.confusion_matrix.ConfusionMatrix at 0x1083de8d0>,\n",
-       " 0.2988,\n",
-       " 0.2978,\n",
-       " 0.2983)"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scorer.evaluate(test_data,new_relations)"
+    "max_agreement_relations = exchange_sense_values(example_parser,total_alignments,max_agreement_parsers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluation (Senses)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparison to Oslopots Scorer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -225,52 +233,127 @@
       "Arg 2 extractor              : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
       "Arg1 Arg2 extractor combined : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
       "Sense classification--------------\n",
-      "*Micro-Average                    precision 0.5360\trecall 0.5352\tF1 0.5356\n",
+      "*Micro-Average                    precision 0.5485\trecall 0.5476\tF1 0.5480\n",
       "Comparison.Concession             precision 1.0000\trecall 0.0660\tF1 0.1239\n",
-      "Comparison.Contrast               precision 0.2347\trecall 0.4182\tF1 0.3007\n",
-      "Contingency.Cause.Reason          precision 0.4706\trecall 0.4384\tF1 0.4539\n",
-      "Contingency.Cause.Result          precision 0.5455\trecall 0.2449\tF1 0.3380\n",
-      "Contingency.Condition             precision 0.9286\trecall 1.0000\tF1 0.9630\n",
-      "EntRel                            precision 0.3824\trecall 0.7150\tF1 0.4983\n",
+      "Comparison.Contrast               precision 0.2160\trecall 0.4909\tF1 0.3000\n",
+      "Contingency.Cause.Reason          precision 0.4267\trecall 0.4384\tF1 0.4324\n",
+      "Contingency.Cause.Result          precision 0.6000\trecall 0.3000\tF1 0.4000\n",
+      "Contingency.Condition             precision 0.8667\trecall 1.0000\tF1 0.9286\n",
+      "EntRel                            precision 0.4306\trecall 0.7600\tF1 0.5497\n",
       "Expansion.Alternative             precision 1.0000\trecall 0.3333\tF1 0.5000\n",
-      "Expansion.Conjunction             precision 0.6512\trecall 0.7377\tF1 0.6918\n",
-      "Expansion.Instantiation           precision 0.3750\trecall 0.0682\tF1 0.1154\n",
-      "Expansion.Restatement             precision 0.4512\trecall 0.2450\tF1 0.3176\n",
-      "Temporal.Asynchronous.Precedence  precision 0.9737\trecall 0.7400\tF1 0.8409\n",
-      "Temporal.Asynchronous.Succession  precision 0.9592\trecall 0.7344\tF1 0.8319\n",
-      "Temporal.Synchrony                precision 0.5902\trecall 0.6923\tF1 0.6372\n",
+      "Expansion.Conjunction             precision 0.6704\trecall 0.7368\tF1 0.7021\n",
+      "Expansion.Instantiation           precision 0.6000\trecall 0.1364\tF1 0.2222\n",
+      "Expansion.Restatement             precision 0.4923\trecall 0.2133\tF1 0.2977\n",
+      "Temporal.Asynchronous.Precedence  precision 0.9048\trecall 0.7600\tF1 0.8261\n",
+      "Temporal.Asynchronous.Succession  precision 0.9600\trecall 0.7500\tF1 0.8421\n",
+      "Temporal.Synchrony                precision 0.5538\trecall 0.6792\tF1 0.6102\n",
       "Overall parser performance --------------\n",
-      "Precision 0.5360 Recall 0.5352 F1 0.5356\n"
+      "Precision 0.5485 Recall 0.5476 F1 0.5480\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(<conll16st.confusion_matrix.ConfusionMatrix at 0x10c16fd50>,\n",
-       " <conll16st.confusion_matrix.ConfusionMatrix at 0x1083dec50>,\n",
-       " <conll16st.confusion_matrix.ConfusionMatrix at 0x1083de9d0>,\n",
-       " <conll16st.confusion_matrix.ConfusionMatrix at 0x1083de850>,\n",
-       " <conll16st.confusion_matrix.ConfusionMatrix at 0x1083deb90>,\n",
-       " 0.536,\n",
-       " 0.5352,\n",
-       " 0.5356)"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "scorer.evaluate(test_data,read_json(\"data/submissions/sense_only/blind/oslopots/output/output.json\"))"
+    "result = scorer.evaluate(test_data,example_parser)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## \"Best Wins\"\n",
+    "\n",
+    "This algorithm focus on the highest reliability for its prediction (F1 Score for its predicted sense)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explicit connectives         : Precision 1.0000 Recall 0.9874 F1 0.9937\n",
+      "Arg 1 extractor              : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
+      "Arg 2 extractor              : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
+      "Arg1 Arg2 extractor combined : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
+      "Sense classification--------------\n",
+      "*Micro-Average                    precision 0.4334\trecall 0.4334\tF1 0.4334\n",
+      "Comparison.Concession             precision 1.0000\trecall 0.0000\tF1 0.0000\n",
+      "Comparison.Contrast               precision 0.1360\trecall 0.5636\tF1 0.2191\n",
+      "Contingency.Cause.Reason          precision 0.4688\trecall 0.2027\tF1 0.2830\n",
+      "Contingency.Cause.Result          precision 0.5000\trecall 0.0204\tF1 0.0392\n",
+      "Contingency.Condition             precision 0.7879\trecall 1.0000\tF1 0.8814\n",
+      "EntRel                            precision 0.4151\trecall 0.2200\tF1 0.2876\n",
+      "Expansion.Alternative             precision 1.0000\trecall 0.3333\tF1 0.5000\n",
+      "Expansion.Conjunction             precision 0.4595\trecall 0.8369\tF1 0.5932\n",
+      "Expansion.Instantiation           precision 0.4762\trecall 0.2273\tF1 0.3077\n",
+      "Expansion.Restatement             precision 0.6667\trecall 0.0132\tF1 0.0260\n",
+      "Temporal.Asynchronous.Precedence  precision 0.5063\trecall 0.8000\tF1 0.6202\n",
+      "Temporal.Asynchronous.Succession  precision 0.9216\trecall 0.7344\tF1 0.8174\n",
+      "Temporal.Synchrony                precision 0.5439\trecall 0.6200\tF1 0.5794\n",
+      "Overall parser performance --------------\n",
+      "Precision 0.4334 Recall 0.4334 F1 0.4334\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = scorer.evaluate(test_data,best_wins_relations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## \"Max Agreement\"\n",
+    "\n",
+    "This algorithm takes the prediction where most of the parsers agree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Explicit connectives         : Precision 1.0000 Recall 0.9874 F1 0.9937\n",
+      "Arg 1 extractor              : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
+      "Arg 2 extractor              : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
+      "Arg1 Arg2 extractor combined : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
+      "Sense classification--------------\n",
+      "*Micro-Average                    precision 0.5485\trecall 0.5476\tF1 0.5480\n",
+      "Comparison.Concession             precision 1.0000\trecall 0.0660\tF1 0.1239\n",
+      "Comparison.Contrast               precision 0.2160\trecall 0.4909\tF1 0.3000\n",
+      "Contingency.Cause.Reason          precision 0.4267\trecall 0.4384\tF1 0.4324\n",
+      "Contingency.Cause.Result          precision 0.6000\trecall 0.3000\tF1 0.4000\n",
+      "Contingency.Condition             precision 0.8667\trecall 1.0000\tF1 0.9286\n",
+      "EntRel                            precision 0.4306\trecall 0.7600\tF1 0.5497\n",
+      "Expansion.Alternative             precision 1.0000\trecall 0.3333\tF1 0.5000\n",
+      "Expansion.Conjunction             precision 0.6704\trecall 0.7368\tF1 0.7021\n",
+      "Expansion.Instantiation           precision 0.6000\trecall 0.1364\tF1 0.2222\n",
+      "Expansion.Restatement             precision 0.4923\trecall 0.2133\tF1 0.2977\n",
+      "Temporal.Asynchronous.Precedence  precision 0.9048\trecall 0.7600\tF1 0.8261\n",
+      "Temporal.Asynchronous.Succession  precision 0.9600\trecall 0.7500\tF1 0.8421\n",
+      "Temporal.Synchrony                precision 0.5538\trecall 0.6792\tF1 0.6102\n",
+      "Overall parser performance --------------\n",
+      "Precision 0.5485 Recall 0.5476 F1 0.5480\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = scorer.evaluate(test_data,max_agreement_relations)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#"
+   ]
   }
  ],
  "metadata": {
