--- a/Coding/02_SenseModel.ipynb
+++ b/Coding/02_SenseModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "from collections import Counter\n",
     "import itertools\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import conll16st.scorer as scorer"
    ]
   },
   {
@@ -1048,6 +1049,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def weight_parser_by_accuracy(gold,parsers):\n",
+    "    \n",
+    "    parser_f1_scores = []\n",
+    "    \n",
+    "    for parser in parsers:\n",
+    "        parser_f1_scores += [(parser[\"Parser\"],scorer.evaluate(gold,parser)[7])]\n",
+    "        \n",
+    "    parser_f1_sum = sum(zip(parser_f1_scores[1]))\n",
+    "    parser_weights = {name:f1_score/parser_f1_sum for name,f1_score in parser_f1_scores}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 354,
    "metadata": {},
    "outputs": [],
@@ -1461,21 +1479,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
