--- a/Coding/03_VotingSystem.ipynb
+++ b/Coding/03_VotingSystem.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,13 @@
     "import conll16st.scorer as scorer\n",
     "import conll16st.partial_scorer as partial_scorer\n",
     "import random\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "import copy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,38 +170,51 @@
     "    relation_senses = {}\n",
     "    \n",
     "    for best_parser,alignments in zip(*[best_relation_indexes,alignment_list]):\n",
+    "        \n",
     "        if best_parser != -1:\n",
     "            best_sense = alignments[\"parsers\"][best_parser][\"Sense\"]\n",
     "            \n",
     "            relation_senses[alignments[\"gold\"][\"ID\"]] = best_sense\n",
-    "            \n",
-    "            #best_sense = best_parser_result[\"Sense\"][0]\n",
-    "            #new_rel = alignments[\"gold\"].copy()\n",
-    "            #new_rel[\"Sense\"] = best_sense\n",
     "    \n",
-    "    \n",
-    "    for rel in parser_rel:\n",
+    "    new_parser_rel = copy.deepcopy(parser_rel)\n",
+    "    for rel in new_parser_rel:\n",
     "        rel_id = rel[\"ID\"]\n",
     "        if rel_id in relation_senses:\n",
     "            rel[\"Sense\"] = relation_senses[rel_id] \n",
-    "        \n",
-    "    return parser_rel"
+    "\n",
+    "    return new_parser_rel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([u'EntRel'], [u'Expansion.Instantiation'])\n"
+     ]
+    }
+   ],
    "source": [
     "best_wins_relations = exchange_sense_values(example_parser,total_alignments,best_wins_parsers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 148,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([u'EntRel'], [u'Expansion.Restatement'])\n"
+     ]
+    }
+   ],
    "source": [
     "max_agreement_relations = exchange_sense_values(example_parser,total_alignments,max_agreement_parsers)"
    ]
@@ -221,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -325,22 +339,22 @@
       "Arg 2 extractor              : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
       "Arg1 Arg2 extractor combined : Precision 1.0000 Recall 1.0000 F1 1.0000\n",
       "Sense classification--------------\n",
-      "*Micro-Average                    precision 0.5485\trecall 0.5476\tF1 0.5480\n",
+      "*Micro-Average                    precision 0.5559\trecall 0.5550\tF1 0.5555\n",
       "Comparison.Concession             precision 1.0000\trecall 0.0660\tF1 0.1239\n",
-      "Comparison.Contrast               precision 0.2160\trecall 0.4909\tF1 0.3000\n",
-      "Contingency.Cause.Reason          precision 0.4267\trecall 0.4384\tF1 0.4324\n",
-      "Contingency.Cause.Result          precision 0.6000\trecall 0.3000\tF1 0.4000\n",
-      "Contingency.Condition             precision 0.8667\trecall 1.0000\tF1 0.9286\n",
-      "EntRel                            precision 0.4306\trecall 0.7600\tF1 0.5497\n",
+      "Comparison.Contrast               precision 0.2500\trecall 0.4909\tF1 0.3313\n",
+      "Contingency.Cause.Reason          precision 0.4051\trecall 0.4384\tF1 0.4211\n",
+      "Contingency.Cause.Result          precision 0.5926\trecall 0.3200\tF1 0.4156\n",
+      "Contingency.Condition             precision 0.9286\trecall 1.0000\tF1 0.9630\n",
+      "EntRel                            precision 0.4262\trecall 0.7800\tF1 0.5512\n",
       "Expansion.Alternative             precision 1.0000\trecall 0.3333\tF1 0.5000\n",
-      "Expansion.Conjunction             precision 0.6704\trecall 0.7368\tF1 0.7021\n",
-      "Expansion.Instantiation           precision 0.6000\trecall 0.1364\tF1 0.2222\n",
-      "Expansion.Restatement             precision 0.4923\trecall 0.2133\tF1 0.2977\n",
-      "Temporal.Asynchronous.Precedence  precision 0.9048\trecall 0.7600\tF1 0.8261\n",
+      "Expansion.Conjunction             precision 0.6839\trecall 0.7368\tF1 0.7094\n",
+      "Expansion.Instantiation           precision 0.5455\trecall 0.1364\tF1 0.2182\n",
+      "Expansion.Restatement             precision 0.4789\trecall 0.2267\tF1 0.3077\n",
+      "Temporal.Asynchronous.Precedence  precision 0.9512\trecall 0.7800\tF1 0.8571\n",
       "Temporal.Asynchronous.Succession  precision 0.9600\trecall 0.7500\tF1 0.8421\n",
-      "Temporal.Synchrony                precision 0.5538\trecall 0.6792\tF1 0.6102\n",
+      "Temporal.Synchrony                precision 0.5606\trecall 0.6981\tF1 0.6218\n",
       "Overall parser performance --------------\n",
-      "Precision 0.5485 Recall 0.5476 F1 0.5480\n"
+      "Precision 0.5559 Recall 0.5550 F1 0.5555\n"
      ]
     }
    ],
